shared/src/test/data/yeast/invalid-json/null-invalid-content.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
WhiteSpace          1,  1,  1 ' '
Error               2,  1,  2 '<info>\n  <version>1.2.0</version>\n  <name>SomethingWrong</name>\n  <releaseDate>2018-04-14 10'
Indicator          94,  4, 28 ':'
BeginScalar        95,  4, 29 ''
Text               95,  4, 29 '56'
EndScalar          97,  4, 31 ''
Indicator          97,  4, 31 ':'
BeginScalar        98,  4, 32 ''
Error              98,  4, 32 '00</releaseDate>\n  <doc>http'
EndScalar         126,  5, 11 ''
Indicator         126,  5, 11 ':'
Error             127,  5, 12 '//someurl</doc>\n  </info>\n'
EndMapping        153,  7,  0 '}'
